# bazel-next

./: .gitignore  BUILD.bazel  WORKSPACE  defs.bzl  next.config.js  nextconfig.js  package-lock.json  package.json  tsconfig.json
@types/: BUILD
components/: BUILD  layout.js
lib/: BUILD
pages/: BUILD
pages/posts/: BUILD
public/: BUILD
public/assets/blog/hello-world/: BUILD
public/favicon/: BUILD
public/images/: BUILD
styles/: BUILD
